--- a/IdealizeSpetral.jl/Project.toml
+++ b/IdealizeSpetral.jl/Project.toml
@@ -11,3 +11,5 @@ MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
